BE/error/src/main/java/com/example/demo/common/exception/BusinessException.java
package com.example.demo.common.exception;

import jakarta.persistence.GeneratedValue;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
public class BusinessException extends RuntimeException {
    private final String code;
    private final HttpStatus httpStatus;

    public BusinessException(String code, HttpStatus httpStatus) {
        this.code = code;
        this.httpStatus = httpStatus;
    }
}
